Created CreateCategoryRequestDto,added fixes